--- a/boletas/src/vista/principal.form
+++ b/boletas/src/vista/principal.form
@@ -13,7 +13,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/images/icons8-marca-de-verificaci&#xf3;n-32.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Confirmar Deposito"/>
+            <Property name="text" type="java.lang.String" value="Confirmar Dep&#xf3;sito"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -108,8 +108,8 @@
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Component id="panelEncabezado" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="panelMenu" max="32767" attributes="0"/>
                       <Component id="panelEscritorio" max="32767" attributes="0"/>
+                      <Component id="panelMenu" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -437,7 +437,7 @@
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="rSPanelGradiente1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="rSPanelGradiente1" alignment="0" pref="552" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
@@ -455,11 +455,11 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="1" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel15" pref="1030" max="32767" attributes="0"/>
-                                  <Component id="jLabel16" alignment="1" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="jLabel16" max="32767" attributes="0"/>
+                                  <Component id="jLabel15" pref="748" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
@@ -471,8 +471,8 @@
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="jLabel16" min="-2" pref="519" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jLabel16" min="-2" pref="417" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -565,7 +565,7 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace pref="500" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -962,7 +962,7 @@
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" pref="608" max="32767" attributes="0"/>
+                          <Component id="jScrollPane1" pref="499" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -980,7 +980,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jLabel10" pref="1030" max="32767" attributes="0"/>
+                              <Component id="jLabel10" pref="748" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -1025,8 +1025,8 @@
                           <Table columnCount="12" rowCount="0">
                             <Column editable="false" title="Registro No." type="java.lang.Object"/>
                             <Column editable="false" title="Fecha Registro" type="java.lang.Object"/>
-                            <Column editable="false" title="Bco-Cuenta" type="java.lang.Object"/>
                             <Column editable="false" title="Boleta" type="java.lang.Object"/>
+                            <Column editable="false" title="Bco-Cuenta" type="java.lang.Object"/>
                             <Column editable="false" title="Valor" type="java.lang.Object"/>
                             <Column editable="false" title="Factura" type="java.lang.Object"/>
                             <Column editable="false" title="Cliente" type="java.lang.Object"/>
@@ -1127,7 +1127,6 @@
                         </Property>
                         <Property name="grosorBordeFilas" type="int" value="0"/>
                         <Property name="grosorBordeHead" type="int" value="0"/>
-                        <Property name="showGrid" type="boolean" value="false"/>
                         <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                           <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                         </Property>
@@ -1159,7 +1158,7 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jPanel4" max="32767" attributes="0"/>
-                      <Component id="jScrollPane2" pref="1054" max="32767" attributes="0"/>
+                      <Component id="jScrollPane2" pref="772" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" max="-2" attributes="0">
@@ -1193,7 +1192,7 @@
                               <Component id="fechaFinal" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                          <Component id="jScrollPane2" pref="528" max="32767" attributes="0"/>
+                          <Component id="jScrollPane2" pref="419" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -1256,8 +1255,8 @@
                           <Table columnCount="12" rowCount="0">
                             <Column editable="false" title="Registro No." type="java.lang.String"/>
                             <Column editable="false" title="Fecha Registro" type="java.lang.Object"/>
-                            <Column editable="false" title="Bco-Cuenta" type="java.lang.Object"/>
                             <Column editable="false" title="Boleta" type="java.lang.Object"/>
+                            <Column editable="false" title="Bco-Cuenta" type="java.lang.Object"/>
                             <Column editable="false" title="Valor" type="java.lang.Object"/>
                             <Column editable="false" title="Factura" type="java.lang.Object"/>
                             <Column editable="false" title="Cliente" type="java.lang.Object"/>
