--- a/boletas/src/vista/principal.form
+++ b/boletas/src/vista/principal.form
@@ -850,7 +850,7 @@
                     <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
                       <ComponentRef name="txtHora"/>
                     </Property>
-                    <Property name="placeholder" type="java.lang.String" value="Fecha de uso"/>
+                    <Property name="placeholder" type="java.lang.String" value="(dd/mm/aaaa)"/>
                   </Properties>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -869,7 +869,7 @@
                     <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
                       <Format format="##:##" subtype="-1" type="5"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="--:--  "/>
+                    <Property name="text" type="java.lang.String" value="--:--"/>
                     <Property name="caretColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="d2" green="76" red="19" type="rgb"/>
                     </Property>
