--- a/boletas/src/vista/principal.form
+++ b/boletas/src/vista/principal.form
@@ -19,12 +19,23 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </MenuItem>
+        <MenuItem class="javax.swing.JMenuItem" name="menuModificarBoleta">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/images/icons8-editar-32.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Modificar N&#xfa;mero De Boleta"/>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
+        </MenuItem>
         <MenuItem class="javax.swing.JMenuItem" name="menuModificar">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/images/icons8-actualizar-32.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Modificar Registro"/>
+            <Property name="text" type="java.lang.String" value="Modificar Datos "/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
