--- a/boletas/src/vista/principal.form
+++ b/boletas/src/vista/principal.form
@@ -481,7 +481,7 @@
                 <Container class="rspanelgradiente.RSPanelGradiente" name="rSPanelGradiente1">
                   <Properties>
                     <Property name="colorPrimario" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                      <Color blue="d7" green="e9" red="c4" type="rgb"/>
+                      <Color blue="ff" green="0" red="ff" type="rgb"/>
                     </Property>
                     <Property name="colorSecundario" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="b0" green="80" red="32" type="rgb"/>
